@@ -15,7 +15,7 @@ INCLUDES = -I. \
 
 LIBS =
 
-FILELOBJS = $(shell cat $(top_builddir)/file/listobjs)
+#FILELOBJS = $(shell cat $(top_builddir)/file/listobjs)
 
 pkgincdir = $(pkgincludedir)
 pkginc_HEADERS = argv.h rpmbuild.h rpmfc.h rpmfile.h rpmspec.h
@@ -27,26 +27,26 @@ librpmbuild_la_SOURCES = \
 	parseBuildInstallClean.c parseChangelog.c parseDescription.c \
 	parseFiles.c parsePreamble.c parsePrep.c parseReqs.c parseScript.c \
 	parseSpec.c poptBT.c reqprov.c rpmfc.c spec.c
-librpmbuild_la_LDFLAGS = -release @VERSION@
-librpmbuild_la_LIBADD = $(FILELOBJS)
-librpmbuild_la_DEPENDENCIES = .created
+librpmbuild_la_LDFLAGS = -release @VERSION@ @HACK_LIBTOOLPATH@ $(top_builddir)/lib/librpm.la
+#librpmbuild_la_LIBADD = $(FILELOBJS)
+#librpmbuild_la_DEPENDENCIES = .created
 
 rpmfile.h:
 	@ln -sf $(top_builddir)/file/file.h $@
 
-$(top_builddir)/file/listobjs:
-	${MAKE} -C $(top_builddir)/file listobjs
-
-.created: rpmfile.h $(top_builddir)/file/listobjs
-	for lo in $(FILELOBJS); do \
-          [ -f $$lo ] || $(LN_S) $(top_builddir)/file/$$lo $$lo ; \
-	done
-	touch $@
+#$(top_builddir)/file/listobjs:
+#	${MAKE} -C $(top_builddir)/file listobjs
+#
+#.created: rpmfile.h $(top_builddir)/file/listobjs
+#	for lo in $(FILELOBJS); do \
+#	  [ -f $$lo ] || $(LN_S) $(top_builddir)/file/$$lo $$lo ; \
+#	done
+#	touch $@
 
 rpmfc.c: rpmfile.h
 
 clean-local:
-	 rm -f $(FILELOBJS) *.o .created rpmfile.h
+	 rm -f *.o rpmfile.h # .created $(FILELOBJS)
 
 # XXX Add internal libtool dependence
 install-data-local:
